# igv_snapshot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_docker.yml
igv_snapshot/: constants.py  helper.py  main.py
igv_snapshot/data/: genome.json
